--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "dark-mode-toggle",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Web Component that toggles dark mode 🌒",
   "main": "./src/dark-mode-toggle.mjs",
   "module": "./dist/dark-mode-toggle.min.mjs",
+  "files": [
+    "./dist/"
+  ],
   "scripts": {
     "clean": "rm -rf ./dist && mkdir dist",
     "lint:js": "npx eslint './src/*.mjs' --fix && npx eslint './demo/*.mjs' --fix",
