--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dark-mode-toggle",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Web Component that toggles dark mode 🌒",
   "main": "./src/dark-mode-toggle.mjs",
   "browser": "src/dark-mode-toggle.mjs",
@@ -16,7 +16,7 @@
     "lint:css": "cp ./src/dark-mode-toggle.mjs ./src/dark-mode-toggle.html && npx stylelint './src/*.html' --fix && cp ./src/dark-mode-toggle.html ./src/dark-mode-toggle.mjs && rm ./src/dark-mode-toggle.html && npx stylelint './demo/*.css' --fix",
     "lint": "npm run lint:js && npm run lint:css",
     "build": "npm run clean && npx terser ./src/dark-mode-toggle.mjs -m toplevel=true --comments /@license/ --ecma=8 -o ./dist/dark-mode-toggle.min.mjs",
-    "prepublish": "npm run lint && npm run build"
+    "prepare": "npm run lint && npm run build"
   },
   "repository": {
     "type": "git",
@@ -33,11 +33,11 @@
   },
   "homepage": "https://github.com/googlechromelabs/dark-mode-toggle#readme",
   "devDependencies": {
-    "eslint": "^5.16.0",
+    "eslint": "^6.1.0",
     "eslint-config-google": "^0.13.0",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
-    "terser": "^4.0.0"
+    "terser": "^4.1.2"
   },
   "eslintConfig": {
     "parserOptions": {
