Add "exports" to package.json

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "dark-mode-toggle",
-  "version": "0.7.3",
+  "version": "0.7.4",
   "description": "Web Component that toggles dark mode 🌒",
   "main": "src/dark-mode-toggle.mjs",
-  "browser": "src/dark-mode-toggle.mjs",
+  "browser": "dist/dark-mode-toggle.min.mjs",
   "module": "dist/dark-mode-toggle.min.mjs",
+  "exports": "dist/dark-mode-toggle.min.mjs",
   "unpkg": "dist/dark-mode-toggle.min.mjs",
   "types": "src/dark-mode-toggle.d.ts",
   "files": [
@@ -35,13 +36,13 @@
   },
   "homepage": "https://github.com/googlechromelabs/dark-mode-toggle#readme",
   "devDependencies": {
-    "eslint": "^7.8.1",
+    "eslint": "^7.15.0",
     "eslint-config-google": "^0.14.0",
     "http-server": "^0.12.3",
-    "shx": "^0.3.2",
-    "stylelint": "^13.7.0",
+    "shx": "^0.3.3",
+    "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
-    "terser": "^5.3.0"
+    "terser": "^5.5.1"
   },
   "eslintConfig": {
     "parserOptions": {
