--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dark-mode-toggle",
-  "version": "0.14.2",
+  "version": "0.14.3",
   "description": "Web Component that toggles dark mode 🌒",
   "main": "./dist/dark-mode-toggle.mjs",
   "browser": "./dist/dark-mode-toggle.min.mjs",
@@ -18,6 +18,7 @@
     "lint:js": "npx eslint \"./src/*.mjs\" --fix && npx eslint \"./demo/*.mjs\" --fix",
     "lint:css": "shx cp ./src/template-contents.tpl ./src/template-contents.html && npx stylelint \"./src/*.html\" --fix && shx cp ./src/template-contents.html ./src/template-contents.tpl && shx rm ./src/template-contents.html && npx stylelint \"./demo/*.css\" --fix",
     "lint": "npm run lint:js && npm run lint:css",
+    "fix": "npx prettier --write .",
     "build": "npm run clean && npx terser ./src/dark-mode-toggle.mjs --toplevel --mangle-props regex=\\\"^_\\\" --comments /@license/ --ecma=8 -o ./dist/dark-mode-toggle.min.mjs",
     "prepare": "npm run lint && npm run build"
   },
@@ -36,14 +37,15 @@
   },
   "homepage": "https://github.com/googlechromelabs/dark-mode-toggle#readme",
   "devDependencies": {
-    "eslint": "^8.23.0",
+    "eslint": "^8.28.0",
     "eslint-config-google": "^0.14.0",
     "http-server": "^14.1.1",
     "postcss-html": "^1.5.0",
+    "prettier": "^2.7.1",
     "shx": "^0.3.4",
-    "stylelint": "^14.11.0",
-    "stylelint-config-standard": "^28.0.0",
-    "terser": "^5.15.0"
+    "stylelint": "^14.15.0",
+    "stylelint-config-standard": "^29.0.0",
+    "terser": "^5.15.1"
   },
   "eslintConfig": {
     "parserOptions": {
@@ -89,8 +91,11 @@
     },
     "overrides": [
       {
-          "files": ["*.html", "**/*.html"],
-          "customSyntax": "postcss-html"
+        "files": [
+          "*.html",
+          "**/*.html"
+        ],
+        "customSyntax": "postcss-html"
       }
     ]
   }
