--- a/package.json
+++ b/package.json
@@ -1,13 +1,20 @@
 {
   "name": "dark-mode-toggle",
-  "version": "0.14.4",
+  "version": "0.14.5",
   "description": "Web Component that toggles dark mode 🌒",
   "main": "./dist/dark-mode-toggle.min.mjs",
   "browser": "./dist/dark-mode-toggle.min.mjs",
   "module": "./dist/dark-mode-toggle.min.mjs",
   "exports": "./dist/dark-mode-toggle.min.mjs",
   "unpkg": "./dist/dark-mode-toggle.min.mjs",
-  "types": "./src/dark-mode-toggle.d.ts",
+  "exports": {
+    ".": {
+      "types": "./src/dark-mode-toggle.d.ts",
+      "module": "./dist/dark-mode-toggle.min.mjs",
+      "import": "./dist/dark-mode-toggle.min.mjs",
+      "browser": "./dist/dark-mode-toggle.min.mjs"
+    }
+  },
   "files": [
     "src",
     "dist"
@@ -37,15 +44,15 @@
   },
   "homepage": "https://github.com/googlechromelabs/dark-mode-toggle#readme",
   "devDependencies": {
-    "eslint": "^8.31.0",
+    "eslint": "^8.38.0",
     "eslint-config-google": "^0.14.0",
     "http-server": "^14.1.1",
     "postcss-html": "^1.5.0",
-    "prettier": "^2.8.2",
+    "prettier": "^2.8.7",
     "shx": "^0.3.4",
-    "stylelint": "^14.16.1",
-    "stylelint-config-standard": "^29.0.0",
-    "terser": "^5.16.1"
+    "stylelint": "^15.5.0",
+    "stylelint-config-standard": "^33.0.0",
+    "terser": "^5.16.9"
   },
   "eslintConfig": {
     "parserOptions": {
