--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "dark-mode-toggle",
-  "version": "0.14.6",
+  "version": "0.15.0",
   "description": "Web Component that toggles dark mode 🌒",
   "main": "./dist/dark-mode-toggle.min.mjs",
   "module": "./dist/dark-mode-toggle.min.mjs",
-  "exports": "./dist/dark-mode-toggle.min.mjs",
   "unpkg": "./dist/dark-mode-toggle.min.mjs",
   "exports": {
     ".": {
@@ -25,8 +24,8 @@
     "lint:css": "shx cp ./src/template-contents.tpl ./src/template-contents.html && npx stylelint \"./src/*.html\" --fix && shx cp ./src/template-contents.html ./src/template-contents.tpl && shx rm ./src/template-contents.html && npx stylelint \"./demo/*.css\" --fix",
     "lint": "npm run lint:js && npm run lint:css",
     "fix": "npx prettier --write .",
-    "build": "npm run clean && npx terser ./src/dark-mode-toggle.mjs --toplevel --mangle-props regex=\\\"^_\\\" --comments /@license/ --ecma=8 -o ./dist/dark-mode-toggle.min.mjs",
-    "prepare": "npm run lint && npm run build"
+    "build": "npm run clean && npx terser ./src/dark-mode-toggle.mjs --toplevel --mangle-props regex=\\\"^_\\\" --comments /@license/ --ecma=8 -o ./dist/dark-mode-toggle.min.mjs && npx terser ./src/dark-mode-toggle-stylesheets-loader.js --toplevel --mangle-props regex=\\\"^_\\\" --comments /@license/ --ecma=8 -o ./dist/dark-mode-toggle-stylesheets-loader.min.js",
+    "prepare": "npm run lint && npm run fix && npm run build"
   },
   "repository": {
     "type": "git",
@@ -43,15 +42,15 @@
   },
   "homepage": "https://github.com/googlechromelabs/dark-mode-toggle#readme",
   "devDependencies": {
-    "eslint": "^8.38.0",
+    "eslint": "^8.56.0",
     "eslint-config-google": "^0.14.0",
     "http-server": "^14.1.1",
-    "postcss-html": "^1.5.0",
-    "prettier": "^2.8.7",
+    "postcss-html": "^1.6.0",
+    "prettier": "^3.2.4",
     "shx": "^0.3.4",
-    "stylelint": "^15.5.0",
-    "stylelint-config-standard": "^33.0.0",
-    "terser": "^5.16.9"
+    "stylelint": "^16.1.0",
+    "stylelint-config-standard": "^36.0.0",
+    "terser": "^5.26.0"
   },
   "eslintConfig": {
     "parserOptions": {
